styles.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

p {
  line-height: 1.4;
  font-family: "Source Code Pro", monospace;
}

.header {
  padding: 24px 24px 0px 24px;
}

#header-img {
  width: 335px;
  height: auto;
}

.synopsis {
  font-size: 12px;
  width: 600px;
}

.footer-text {
  font-family: "Source Code Pro", monospace;
  font-size: 12px;
  margin-top: 6px;
}

.sketchbooks {
  width: 100vw;
  min-height: 500px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  -ms-overflow-style: none; /* Hide scrollbar on IE and Edge */
  scrollbar-width: none;
  display: flex;
  flex-wrap: nowrap;
  margin-left: 10px;
}

.sketchbook_text {
  margin: 0px 0px 0px 14px;
  font-size: 12px;
  line-height: 1.7;
}

.sketchbooks::-webkit-scrollbar {
  display: none; /* Hide scrollbar on Chrome, Safari */
}

.df-popup-thumb,
.df-book-cover::after {
  background: none !important;
  flex: 0 0 auto;
}

.df-book-wrapper,
.df-book-page1,
.df-book-page2,
.df-book-cover {
  border-radius: 12px;
}

#issue_1,
#issue_2,
.df-popup-thumb,
.df-book-cover::after {
  width: 250px;
}

#issue_3,
#issue_5,
#issue_7,
.df-popup-thumb,
.df-book-cover::after {
  width: 175px;
}

#issue_4,
#issue_6,
.df-popup-thumb,
.df-book-cover::after {
  width: 250px;
}

main {
  flex: 1;
}

.signature {
  padding: 24px;
  row-gap: 8px;
}

@media (max-width: 800px) {
  .signature {
    padding: 16px;
    row-gap: 8px;
  }

  .footer-text {
    font-size: 10px;
  }

  .sketchbooks {
    margin-left: 0px;
  }

  .header {
    padding: 0px;
  }

  #header-img {
    width: 100% !important;
    height: auto !important;
  }

  .synopsis {
    width: auto;
    padding: 0px 16px 0px 16px;
    font-size: 12px;
  }
}

